force-app/main/default/objects/Partner_Content__c/Partner_Content__c.object-meta.xml
<CustomObject>
    <label>Partner Content</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Content</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>