force-app/main/default/objects/Partner_Content__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Deck</fullName>
            </value>
            <value>
                <fullName>Product Sheet</fullName>
            </value>
            <value>
                <fullName>Pricing Guide</fullName>
            </value>
            <value>
                <fullName>Marketing Asset</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>