force-app/main/default/objects/Partner_Content__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description
  >Salesforce ContentDocument Id for the file wrapped by this partner content record.</description>
    <label>File</label>
    <length>18</length>
    <type>Text</type>
</CustomField>