force-app/main/default/objects/Partner_Content__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether the partner content asset is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>