force-app/main/default/objects/Partner_Content__c/fields/Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier__c</fullName>
    <description>Partner tier targeted by the content asset.</description>
    <label>Partner Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>