force-app/main/default/objects/Partner_Content__c/fields/Published_Date__c.field-meta.xml
<CustomField>
    <fullName>Published_Date__c</fullName>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>