force-app/main/default/objects/Partner_Content__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Visibility rule for the partner content asset.</description>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>All Partners</fullName><default
        >false</default><label>All Partners</label></value>
            <value><fullName>Internal Only</fullName><default
        >false</default><label>Internal Only</label></value>
            <value><fullName>Restricted</fullName><default>false</default><label
        >Restricted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>